--- a/core/res/res/values/screwd_config.xml
+++ b/core/res/res/values/screwd_config.xml
@@ -94,4 +94,9 @@
     <!-- Whether device has dash charging support -->
     <bool name="config_hasDashCharger">false</bool>
 
+    <!-- Hardware button brightness -->
+    <integer name="config_buttonBrightnessSettingDefault">255</integer>
+    <integer name="config_keyboardBrightnessSettingDefault">0</integer>
+    <bool name="config_deviceHasVariableButtonBrightness">false</bool>
+
 </resources>
