Forward port Samsung STK support (frameworks/base)
[pawitp: port to Lollipop]

Change-Id: I08d169bc466df290fca838b09f6b0fbea2ac82a8
Signed-off-by: Corey Edwards <ensabahnur16@gmail.com>

--- a/core/res/res/values/screwd_config.xml
+++ b/core/res/res/values/screwd_config.xml
@@ -88,4 +88,7 @@
     <!-- Whether the device needs axis inversion for the fingerprint notification panel gesture when rotated -->
     <bool name="config_needsFingerprintAxisInversion">false</bool>
 
+    <!-- Boolean to enable stk functionality on Samsung phones -->
+    <bool name="config_samsung_stk">false</bool>
+
 </resources>
