--- a/core/res/res/values/screwd_symbols.xml
+++ b/core/res/res/values/screwd_symbols.xml
@@ -212,4 +212,7 @@
 
   <java-symbol type="bool" name="config_needsFingerprintAxisInversion" />
 
+  <!-- Config.xml entries -->
+  <java-symbol type="bool" name="config_samsung_stk" />
+
 </resources>
