BatteryService: add dash charging support
Change-Id: I337feabf26ebdca100b651dcf492cc78b4fede74
Signed-off-by: thecrazyskull <anaskarbila@aospa.co>
Signed-off-by: Corey Edwards <ensabahnur16@gmail.com>

--- a/core/res/res/values/screwd_symbols.xml
+++ b/core/res/res/values/screwd_symbols.xml
@@ -215,4 +215,7 @@
   <!-- Config.xml entries -->
   <java-symbol type="bool" name="config_samsung_stk" />
 
+  <!-- Whether device has dash charging support -->
+  <java-symbol type="bool" name="config_hasDashCharger" />
+
 </resources>
