--- a/core/res/res/values/screwd_config.xml
+++ b/core/res/res/values/screwd_config.xml
@@ -91,4 +91,7 @@
     <!-- Boolean to enable stk functionality on Samsung phones -->
     <bool name="config_samsung_stk">false</bool>
 
+    <!-- Whether device has dash charging support -->
+    <bool name="config_hasDashCharger">false</bool>
+
 </resources>
