--- a/packages/SystemUI/res/values/screwd_colors.xml
+++ b/packages/SystemUI/res/values/screwd_colors.xml
@@ -97,4 +97,8 @@
 
     <!-- Recents Memory bar -->
     <color name="recents_memory_text_color">@android:color/white</color>
+
+   <!-- Screen pinning layout -->
+    <color name="screen_pinning_background_color">@*android:color/accent_device_default_light</color>
+    <color name="screen_pinning_button_text">@android:color/white</color>
 </resources>
